crates/parser/src/tests/snapshots/kcl_parser__tests__expr__quant_safe_nav_0.snap
---
source: crates/parser/src/tests/expr.rs
assertion_line: 85
expression: "$crate :: tests :: parsing_expr_string(r####\"any x in _a?.b { x > 0 }\"####)"
---
Node {
    node: Quant(
        QuantExpr {
            target: Node {
                node: Selector(
                    SelectorExpr {
                        value: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "_a",
                                            filename: "",
                                            line: 1,
                                            column: 9,
                                            end_line: 1,
                                            end_column: 11,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 9,
                            end_line: 1,
                            end_column: 11,
                        },
                        attr: Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "b",
                                        filename: "",
                                        line: 1,
                                        column: 13,
                                        end_line: 1,
                                        end_column: 14,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 1,
                            column: 13,
                            end_line: 1,
                            end_column: 14,
                        },
                        ctx: Load,
                        has_question: true,
                    },
                ),
                filename: "",
                line: 1,
                column: 9,
                end_line: 1,
                end_column: 14,
            },
            variables: [
                Node {
                    node: Identifier {
                        names: [
                            Node {
                                node: "x",
                                filename: "",
                                line: 1,
                                column: 4,
                                end_line: 1,
                                end_column: 5,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 5,
                },
            ],
            op: Any,
            test: Node {
                node: Compare(
                    Compare {
                        left: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "x",
                                            filename: "",
                                            line: 1,
                                            column: 17,
                                            end_line: 1,
                                            end_column: 18,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 17,
                            end_line: 1,
                            end_column: 18,
                        },
                        ops: [
                            Gt,
                        ],
                        comparators: [
                            Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 21,
                                end_line: 1,
                                end_column: 22,
                            },
                        ],
                    },
                ),
                filename: "",
                line: 1,
                column: 17,
                end_line: 1,
                end_column: 22,
            },
            if_cond: None,
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 24,
}
