crates/parser/src/tests/snapshots/kcl_parser__tests__expr__quant_safe_nav_1.snap
---
source: crates/parser/src/tests/expr.rs
assertion_line: 89
expression: "$crate :: tests :: parsing_expr_string(r####\"all y in _a?.b?.c { y < 0 }\"####)"
---
Node {
    node: Quant(
        QuantExpr {
            target: Node {
                node: Selector(
                    SelectorExpr {
                        value: Node {
                            node: Selector(
                                SelectorExpr {
                                    value: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    Node {
                                                        node: "_a",
                                                        filename: "",
                                                        line: 1,
                                                        column: 9,
                                                        end_line: 1,
                                                        end_column: 11,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 9,
                                        end_line: 1,
                                        end_column: 11,
                                    },
                                    attr: Node {
                                        node: Identifier {
                                            names: [
                                                Node {
                                                    node: "b",
                                                    filename: "",
                                                    line: 1,
                                                    column: 13,
                                                    end_line: 1,
                                                    end_column: 14,
                                                },
                                            ],
                                            pkgpath: "",
                                            ctx: Load,
                                        },
                                        filename: "",
                                        line: 1,
                                        column: 13,
                                        end_line: 1,
                                        end_column: 14,
                                    },
                                    ctx: Load,
                                    has_question: true,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 9,
                            end_line: 1,
                            end_column: 14,
                        },
                        attr: Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "c",
                                        filename: "",
                                        line: 1,
                                        column: 16,
                                        end_line: 1,
                                        end_column: 17,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 1,
                            column: 16,
                            end_line: 1,
                            end_column: 17,
                        },
                        ctx: Load,
                        has_question: true,
                    },
                ),
                filename: "",
                line: 1,
                column: 9,
                end_line: 1,
                end_column: 17,
            },
            variables: [
                Node {
                    node: Identifier {
                        names: [
                            Node {
                                node: "y",
                                filename: "",
                                line: 1,
                                column: 4,
                                end_line: 1,
                                end_column: 5,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 5,
                },
            ],
            op: All,
            test: Node {
                node: Compare(
                    Compare {
                        left: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "y",
                                            filename: "",
                                            line: 1,
                                            column: 20,
                                            end_line: 1,
                                            end_column: 21,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 20,
                            end_line: 1,
                            end_column: 21,
                        },
                        ops: [
                            Lt,
                        ],
                        comparators: [
                            Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 24,
                                end_line: 1,
                                end_column: 25,
                            },
                        ],
                    },
                ),
                filename: "",
                line: 1,
                column: 20,
                end_line: 1,
                end_column: 25,
            },
            if_cond: None,
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 27,
}
